--- a/elevate/app/assets/stylesheets/application.css
+++ b/elevate/app/assets/stylesheets/application.css
@@ -1,15 +1,16 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url('normalize.css');
+@import url('defaults.css');
+@import url('helpers.css');
+
+/*@import url('animations.css');*/
+@import url('buttons.css');
+@import url('containers.css');
+@import url('forms.css');
+@import url('headings.css');
+@import url('headlines.css');
+@import url('images.css');
+@import url('navbar.css');
+@import url('pages.css');
+@import url('typist.css');
+
+@import url('poll-img.css');
