--- a/elevate/app/assets/stylesheets/navbar.css
+++ b/elevate/app/assets/stylesheets/navbar.css
@@ -1,14 +1,14 @@
-.header {/* background-color: #bfe3e6; */display: flex;justify-content: space-between;padding: 2rem 7rem;z-index: 9999;/* position: absolute; */width: 100%;}
+.navbar {/* background-color: #bfe3e6; */display: flex;justify-content: space-between;padding: 2rem 7rem;z-index: 9999;/* position: absolute; */width: 100%;}
 
-.header-logo {
+.navbar-logo {
 
 }
 
-.header-nav {list-style: none;display: flex;}
+.navbar-nav {list-style: none;display: flex;}
 
-.header-item {margin-right: 1rem;}
+.navbar-item {margin-right: 1rem;}
 
-.header-link {
+.navbar-link {
   margin-right: 1rem;
   text-decoration: none;
   font-weight: 700;
