styled to separate headers

--- a/elevate/app/assets/stylesheets/pages.css
+++ b/elevate/app/assets/stylesheets/pages.css
@@ -1,6 +1,6 @@
 .page-home {
     /*background-color: #3484C6;*/
-    background-color: #6CB2DD;
+    /*background-color: #6CB2DD;*/
     padding: 0rem 0 20rem;
 }
 
